# ag-iot-android-app

./: .gitignore  Falcon1.5_architecture.asta  README.en.md  README.md  build.gradle  config.gradle  iot.jks  local.properties  settings.gradle
app/: agconnect-services.json  build.gradle
app/libs/: gsyVideoPlayer-aliplay-release.aar  gsyVideoPlayer-armv64-release.aar  gsyVideoPlayer-armv7a-release.aar  gsyVideoPlayer-base-release.aar  gsyVideoPlayer-java-release.aar  gsyVideoPlayer-proxy_cache-release.aar  gsyVideoPlayer-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_cb_check_change_voice.xml  bg_cb_check_status_s.xml  bg_cb_light.xml  bg_frame_black_r20.xml  bg_full_black_25_r10.xml  bg_full_grey_ec_r10.xml  bg_full_grey_r50.xml  bg_player_function3_wdr.xml  bg_player_function4_nv.xml  bg_player_function5_sd.xml  bg_player_function7_pir.xml  bg_player_function8_siren.xml  bg_player_function_mute.xml  bg_player_function_record.xml  bg_red_round.xml  btn_home_mine_selector.xml  power_shape_progressbar.xml  selected_button.xml  unselected_button.xml
app/src/main/res/layout/: activity_about.xml  activity_account_security.xml  activity_add_device.xml  activity_add_device_result.xml  activity_album.xml  activity_album_view_photo.xml  activity_app_update.xml  activity_called.xml  activity_change_pwd.xml  activity_dev_preview.xml  activity_dev_streammgr.xml  activity_main.xml  (+87 more)
avengine/: build.gradle
avengine/src/main/: AndroidManifest.xml
avengine/src/main/cpp/: AvCodecUtility.cpp  AvCodecUtility.hpp  AvParseProgress.cpp  AvParseProgress.hpp  AvParserEng.cpp  AvParserEng.hpp  AvSoftDecoder_jni.cpp  AvSoftDecoder_jni.h  CMakeLists.txt  ErrCode.h  JNIHelper.hpp  JNIPublic.h  comtypedef.hpp
avengine/src/main/cpp/base/: BaseCommDefine.hpp  BaseFFMpeg.hpp  BaseInclude.hpp  BaseRAII.hpp
avengine/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
avengine/src/main/cpp/ffmpeg/include/libffmpeg/: config.h
gradle/wrapper/: gradle-wrapper.properties
iotsdk20/: build.gradle
iotsdk20/src/main/: AndroidManifest.xml
iotsdk20/src/main/cpp/: CMakeLists.txt  ImgCvt_jni.cpp  ImgCvt_jni.h
org.eclipse.paho.android.service/: build.gradle
org.eclipse.paho.android.service/src/main/: AndroidManifest.xml
wayangapp/: build.gradle  local.properties
wayangapp/libs/: tibrary-release.aar
wayangapp/src/main/: AndroidManifest.xml
(+552 files in other folders)
